# arcgis-uploader

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DOLT_REMOTE.md  README.md  manifest  pyproject.toml
.beads/: config.yaml  interactions.jsonl  metadata.json
app/: arcgis.py  config.py  duplicates.py  esri.py  ingest.py  main.py  preview.py
docs/: agent-workflows.md  licensing.md
scripts/: arcgis_iwa_token_check.py  make_package.py
static/: example1.html  example2.html  example3.html  example4.html  index.html  preview.html
tests/: conftest.py  test_api.py  test_arcgis_auth.py  test_config.py  test_esri.py  test_preview.py  test_username.py
