[project]
name = "arcgis-uploader"
version = "0.1.0"
description = "Reference web form: upload spatial data, strip attributes, tag with a project ID, append to an ArcGIS Enterprise hosted feature service"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "geopandas>=1.0",
    "pyogrio>=0.8",
    "shapely>=2.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
